# helics-packaging

./: .gitignore  LICENSE  README.md
.github/workflows/: helics_version_update.yml  pythonpackage.yml  setup-macos-10.10-sdk.sh  setup-macos-10.9-sdk.sh  update-helics.yml  update-mingw-package.yml  update-spack-package.yml  update-yggdrasil-package.yml  upload-release-asset.sh
helics-apps-pip/: .gitattributes  MANIFEST.in  README.md  setup.cfg  setup.py
helics-pip/: MANIFEST.in  README.md  setup.py
helics-pip/helics/: __init__.py  _version.py
helics-pip/packaging_scripts/: build-Linux.sh  build-Windows.sh  build-macOS.sh  repair-Linux.sh  repair-Windows.sh  repair-macOS.sh  setup-Linux.sh  setup-Windows.sh  setup-macOS.sh
helics_apps-pip/: CMakeLists.txt  README.md  pyproject.toml  setup.py
helics_apps-pip/helics_apps/: __init__.py  _version.py
helics_apps-pip/packaging_scripts/: build-Linux.sh  build-Windows.sh  build-macOS.sh  repair-Linux.sh  repair-Windows.sh  repair-macOS.sh  setup-Linux.sh  setup-Windows.sh  setup-macOS.sh
pip/: .gitattributes  MANIFEST.in  README.md  setup.cfg  setup.py
pip/helics/: __init__.py
pip/packaging_scripts/: build-Linux.sh  build-Windows.sh  build-macOS.sh  repair-Linux.sh  repair-Windows.sh  repair-macOS.sh  setup-Linux.sh  setup-Windows.sh  setup-macOS.sh
